white space resolved

--- a/src/App.css
+++ b/src/App.css
@@ -1,38 +1,94 @@
-.App {
-  text-align: center;
+@tailwind base;
+@tailwind components;
+@tailwind utilities;
+
+
+body {
+  margin: 0;
+  font-family: -apple-system, BlinkMacSystemFont, 'Segoe UI', 'Roboto', 'Oxygen',
+    'Ubuntu', 'Cantarell', 'Fira Sans', 'Droid Sans', 'Helvetica Neue',
+    sans-serif;
+  -webkit-font-smoothing: antialiased;
+  -moz-osx-font-smoothing: grayscale;
 }
 
-.App-logo {
-  height: 40vmin;
-  pointer-events: none;
+code {
+  font-family: source-code-pro, Menlo, Monaco, Consolas, 'Courier New',
+    monospace;
 }
 
-@media (prefers-reduced-motion: no-preference) {
-  .App-logo {
-    animation: App-logo-spin infinite 20s linear;
-  }
+.img-card {
+  box-shadow: -17px 20px 50px rgba(0, 0, 0, .1);
 }
 
-.App-header {
-  background-color: #282c34;
-  min-height: 100vh;
+#payment-card {
+  padding: '10px';
+}
+
+.loader {
   display: flex;
-  flex-direction: column;
   align-items: center;
-  justify-content: center;
-  font-size: calc(10px + 2vmin);
-  color: white;
+  justify-content: space-around;
+  width: 100px;
+  height: 50px;
+  margin: 0 auto;
+  animation: slide-in 2s;
 }
 
-.App-link {
-  color: #61dafb;
-}
-
-@keyframes App-logo-spin {
+@keyframes slide-in {
   from {
-    transform: rotate(0deg);
+    transform: translateX(-100vw);
   }
+
   to {
-    transform: rotate(360deg);
+    transform: translateX(0%);
   }
+}
+
+@keyframes leap {
+  0% {
+    transform: translateY(0);
+  }
+
+  7% {
+    transform: scale(1);
+  }
+
+  25% {
+    transform: scale(1.3);
+  }
+
+  50% {
+    transform: scale(1);
+    opacity: 0.5;
+  }
+
+  75% {
+    transform: translateY(10px);
+  }
+
+  100% {
+    transform: translateY(0);
+  }
+}
+
+.dot {
+  width: 25px;
+  height: 25px;
+  border-radius: 100%;
+}
+
+.dot:nth-child(1) {
+  background-color: #e26ee5;
+  animation: leap 1s ease-in-out alternate 0.4s infinite;
+}
+
+.dot:nth-child(2) {
+  background-color: #7e30e1;
+  animation: leap 1s ease-in-out alternate 0.6s infinite;
+}
+
+.dot:nth-child(3) {
+  background-color: #efe704;
+  animation: leap 1s ease-in-out alternate 0.8s infinite;
 }
